<resources>
    <string name="app_name">Test</string>
    <string name="textview">TextView</string>
    <string name="title">Log in to handled</string>
    <string name="titleSignup">Sign up to handled</string>
    <string name="titleSignupFb">Sign up with facebook</string>
    <string name="titleSignupEmail">Sign up with email</string>
    <string name="lblOr">Or</string>
    <string name="continueFacebook">Continue with facebook</string>
    <string name="txtEmail">Your email address</string>
    <string name="txtPassword">Enter password</string>
    <string name="loginEmail">log in with email</string>
    <string name="txtForgetPassword">Forget Password?</string>
    <string name="lblDonthave">"Don't have an account?"</string>
    <string name="lblSignup">Sign up</string>
    <string name="lblHaveAccount">Already have an account</string>
    <string name="lblLogin">Log in</string>
    <string name="lblTerm1">By signng up to handled, you agree to our</string>
    <string name="lblTerm2">Term of Use and Privacy Policy</string>
    <string name="lblCancel">Cancel</string>
    <string name="titleForgotPass">Forgotten your password?</string>
    <string name="desForgotPass">Enter your email address to reset your \npassword.</string>
    <string name="submit">Submit</string>
    <string name="letGet">"Let's get you that great deal!"</string>
    <string name="desSendBill">"We'd like to craft a comparison just for you, so \nwe are going to need your bill.</string>
    <string name="billPayer">Not the bill payer?</string>
    <string name="LetThemKnow">Let them know</string>
    <string name="WeTake">We take privacy seriously.</string>
    <string name="learnHow">Learn how</string>
    <string name="sendBill">Send us your bill</string>
    <string name="whoPay">Who pay the bills?</string>
    <string name="desPayBill">"Let's get your bill payer set up to start paying\nless for energy"</string>
    <string name="Sendus">Send us your bill</string>
</resources>
