<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="0dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/bill01" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letGet"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/desSendBill"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="16sp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/button4"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/sendBill"
        android:textColor="@color/colorWhite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/textView18"
            android:text="@string/billPayer"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView17"
            android:layout_alignBottom="@+id/textView17"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:text="@string/LetThemKnow"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="56dp"
            android:text="@string/WeTake"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/textView19"
            android:text="@string/learnHow"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
