<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCancel"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textAlignment="textEnd"/>

    <TextView
        android:layout_marginTop="64dp"
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleForgotPass"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/desForgotPass"
        android:textSize="14sp"
        android:textColor="@color/colorGrey"
        android:textAlignment="textStart"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/boder">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="21dp"
            app:srcCompat="@drawable/social_email_icon" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button"/>
</LinearLayout>
