<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSignup"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/colorBlack"/>

    <RelativeLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:background="@drawable/boder">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/textView8"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@+id/textView8"
            app:srcCompat="@drawable/fb_art" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="76dp"
            android:text="@string/titleSignupFb"
            android:textColor="@color/colorGrey"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:paddingTop="16dp"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblOr"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"/>

    <RelativeLayout

        android:background="@drawable/boder"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            app:srcCompat="@drawable/social_email_icon" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/imageView5"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:background="@drawable/boder"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            app:srcCompat="@drawable/lock_grey_192x192" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/imageView6"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/button2"
        android:onClick="changePage"
        android:background="@drawable/button"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSignupEmail" />

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:text="@string/lblTerm1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorGrey"
        android:text="@string/lblTerm2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="-20dp"
        android:layout_marginLeft="-20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/textView7"
            android:text="@string/lblHaveAccount"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="84dp"
            android:text="@string/lblLogin"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>

