<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:padding="20dp"
            android:background="@color/colorWhite"
            tools:context="com.example.phuoc.test.MainActivity"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="32sp" />

            <RelativeLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/boder"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_marginEnd="19dp"
                    android:layout_toStartOf="@+id/textView3"
                    android:contentDescription="icon-facebook"
                    app:srcCompat="@drawable/fb_art" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="73dp"
                    android:text="@string/continueFacebook"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/lblOr"
                android:textAlignment="center"
                android:textSize="16sp" />

            <RelativeLayout
                android:background="@drawable/boder"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="13dp"
                    android:layout_toStartOf="@+id/editText2"
                    android:contentDescription="icon-email"
                    app:srcCompat="@drawable/social_email_icon" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:hint="@string/txtEmail"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="16dp"
                android:background="@drawable/boder"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="14dp"
                    android:layout_toStartOf="@+id/editText3"
                    android:contentDescription="icon-lock"
                    app:srcCompat="@drawable/lock_grey_192x192" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/txtPassword"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:shadowColor="@android:color/transparent"
                android:background="@drawable/button"
                android:text="@string/loginEmail"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txtForgetPassword"
                android:textAlignment="center"
                android:textColor="@color/colorBlue"
                android:textSize="16sp" />

    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="-20dp"
                android:layout_marginLeft="-20dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="36dp"
                        android:background="@color/lightGrey" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="15dp"
                        android:layout_toStartOf="@+id/textView7"
                        android:text="@string/lblDonthave"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="84dp"
                        android:text="@string/lblSignup"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>


