<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingRight="32dp"
    android:paddingLeft="32dp"
    android:paddingTop="45dp">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/cancel" />

    <TextView
        android:layout_marginTop="45dp"
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whoPay"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="9dp"
        android:id="@+id/textView22"
        android:lineSpacingMultiplier="1.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desPayBill"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <RelativeLayout

        android:background="@drawable/boder"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            app:srcCompat="@drawable/person_grey_192x192" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView10"
            android:layout_toEndOf="@+id/imageView10"
            android:background="@android:color/transparent"
            android:ems="10"
            android:textSize="16sp"
            android:hint="Bill payer's name"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout

        android:background="@drawable/boder"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            app:srcCompat="@drawable/social_email_icon" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView5"
            android:background="@android:color/transparent"
            android:ems="10"
            android:textSize="16sp"
            android:hint="Bill payer's email address"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LetThemKnow"
        android:background="@drawable/button"
        android:textColor="@color/colorWhite"/>
</LinearLayout>
